--- a/style/style.css
+++ b/style/style.css
@@ -28,11 +28,12 @@
     font-weight: 800;
     font-size: 35px;
     margin-bottom: 20px;
+    color: white;
 }
 
 .heading-text {
     margin-bottom: 20px;
-    color: rgb(109, 103, 103);
+    color: rgb(214, 214, 214);
 }
 
 .header-btn {
